# swift-cart

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
service/service/: settings.py  urls.py
service/shopApp/: admin.py  mail.py  models.py  serializers.py  urls.py  views.py
service/shopApp/migrations/: 0001_initial.py  0002_order_orderitem.py  0003_alter_product_stock.py  0003_cart_product_cart_quantity_alter_cart_user_and_more.py  0003_remove_order_total_amount_order_amount_order_product_and_more.py  0004_cart_total_price.py
service/templates/: docs.html
swiftCart/config/: asgi.py  settings.py  urls.py  wsgi.py
swiftCart/services/: db.json  mail.py  services.py
swiftCart/shopApp/: admin.py  models.py  serializers.py  views.py
swiftCart/shopApp/migrations/: 0002_remove_cart_products.py  0003_cart_product_cart_quantity_alter_cart_user_and_more.py  0004_remove_cart_products_remove_order_amount_and_more.py  0005_alter_order_cart.py  0006_cart_status.py
swiftCart/templates/: mail.html
